Bug 94008 - FILEOPEN: Crash opening password protected file - CJK UI
Summary: FILEOPEN: Crash opening password protected file - CJK UI
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.2.1 rc
Hardware: x86 (IA32) Windows (All)
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.4
Keywords: regression
: 94838 95832 95837 (view as bug list)
Depends on:
Blocks: CJK
  Show dependency treegraph
 
Reported: 2015-09-08 04:29 UTC by Kevin Suo
Modified: 2016-10-25 19:21 UTC (History)
12 users (show)

See Also:
Crash report or crash signature:


Attachments
a simple password protected xlsx file (14.50 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2015-09-08 04:30 UTC, Kevin Suo
Details
un-successful-debug info (19.65 KB, text/plain)
2015-09-09 06:14 UTC, Kevin Suo
Details
a simple password protected pptx file (35.50 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2015-10-18 07:31 UTC, Tomofumi Yagi
Details
Workaround patch (814 bytes, patch)
2015-10-18 07:37 UTC, Tomofumi Yagi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2015-09-08 04:29:06 UTC
Calc crashes when try to open an xlsx file protected by password.

Steps to reproduce:
1. Open the attached xlsx file with Calc. (This is a blank xlsx file created in MSO2010, protected by password)

Current Behaviour:
Calc Crashes after the password input diablog appears.

Version: 5.0.2.1
Build ID: 9a18d52abbdfbdc2ac9acebec2b92e7859eb73b7
Locale: zh-CN (zh_CN)
Win 10 x86.
Comment 1 Kevin Suo 2015-09-08 04:30:17 UTC
Created attachment 118511 [details]
a simple password protected xlsx file
Comment 2 tommy27 2015-09-08 05:37:55 UTC
can you tell the password too?
Comment 3 Kevin Suo 2015-09-08 05:41:31 UTC
(In reply to tommy27 from comment #2)
password is 123456
Comment 4 raal 2015-09-08 06:02:03 UTC
I can not confirm with 5.0.1.2
ID build: 81898c9f5c0d43f3473ba111d7b351050be20261, win7

Please test with version 5.0.1.2, http://www.libreoffice.org/download/. Thanks
Comment 5 Kevin Suo 2015-09-08 06:18:14 UTC
(In reply to raal from comment #4)
Hi raal, I reported this bug regarding the 5.0.2.1 test build. If you are not able to reproduce with 5.0.1.2, then it's a possible regression.

Changing back to UNCONFIRMED.

Thanks.
Comment 6 Jacques Guilleron 2015-09-08 15:04:57 UTC
Opened without issue with
LO 5.0.2.1 Build ID: 9a18d52abbdfbdc2ac9acebec2b92e7859eb73b7
Locale : fr-FR (fr_FR)
& Windows 7 Home Premium
Comment 7 raal 2015-09-08 18:15:13 UTC
No crash with Version: 5.1.0.0.alpha1+
Build ID: 50f2c712c46c66264279ab3b61888e491a4d8dca
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-09-04_06:07:29
Comment 8 Kevin Suo 2015-09-09 06:14:04 UTC
Created attachment 118538 [details]
un-successful-debug info

See attached dbg result. This seems to be an unsucessful dbg, I got the following error:
ERROR: Symbol file could not be found...

Hope this is helpful in some point. thanks.
Comment 9 Kevin Suo 2015-09-09 06:15:14 UTC
(In reply to Kevin Suo from comment #8)
By the way, I use WinDbg, with the following symbol path:
CACHE*C:\symbols;SRV*http://dev-builds.libreoffice.org/daily/master/Win-x86@39/symbols;SRV*http://dev-downloads.libreoffice.org/symstore/symbols;SRV*http://msdl.microsoft.com/download/symbols
Comment 10 tommy27 2015-09-13 13:07:23 UTC
no crash with LibO 5.0.2.1
Build ID: 9a18d52abbdfbdc2ac9acebec2b92e7859eb73b7
Versione locale: en-US (it_IT)

tested under Win8.1 x64
other norepro were with Win7

maybe a Win10 specific issue?
Comment 11 Christian Lohmaier 2015-09-18 16:42:14 UTC
not reproducible on Windows 10 with either 5.0.0.5 or 5.0.2.2 

and it is normal that the build doesn't find symbol for soffice.bin, but  it should  find for others. Unfortunately your debug info stops after not finding the one for soffice.bin....

As there are onedrive entries in the logs as well: do you load it from a remote volume? Or does it also occur when trying to open it from local disk?

Does the crash occur as soon as the password-dialog is shown, or after you tried to press OK after entering the password?
Comment 12 baffclan 2015-10-10 12:56:35 UTC
Reproduce with Japanese UI LibOdev master.
No Crash en-US UI.

Version: 5.1.0.0.alpha1+ (x64)
Build ID: 09fc6fef2d03ca8558dd6f0eec45d61ceb282cb5
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-09-27_22:33:48
Locale: ja-JP (ja_JP)
Comment 13 raal 2015-10-11 06:13:48 UTC
*** Bug 94838 has been marked as a duplicate of this bug. ***
Comment 14 raal 2015-10-11 06:15:28 UTC
Confirmed in bug 94838
Comment 15 Naruhiko Ogasawara 2015-10-11 15:48:10 UTC
it seems as a CJK bug.  The dialog which ask a password might cause the crash.

Some Japanese users reported that this issue is caused with any LibO applications (Writer, Calc, Impress and Draw).  All of the applications use same password  dialog I think.
Comment 16 Naruhiko Ogasawara 2015-10-11 15:51:01 UTC
Oops, I mean,

(In reply to Naruhiko Ogasawara from comment #15)
> it seems as a CJK bug.  The dialog which ask a password might cause the
> crash.

... with Chinese or Japanese string.

I also tried English locale and it works well.
Comment 17 Kevin Suo 2015-10-13 01:19:30 UTC
(In reply to Naruhiko Ogasawara from comment #15)
> it seems as a CJK bug.  The dialog which ask a password might cause the crash.

Yes it is! I switched to en_US UI and there is no crash. When I switch back to zh_CN UI it crashes.

Changing the summary title accordingly.
Comment 18 Kevin Suo 2015-10-13 01:22:52 UTC
As reported in bug 94838, crash also happens with ODS file, so this is not xlsx file only.
Comment 19 baffclan 2015-10-14 12:39:07 UTC
I tested few multi-byte languages.

Crash language:
am/Amharic
as/Assamese
dgo/Dogri

Version: 5.0.3.1 (x64)
Build ID: fd8cfc22f7f58033351fcb8a83b92acbadb0749e
Locale: ja-JP (ja_JP)
Comment 20 Tomofumi Yagi 2015-10-18 07:26:50 UTC
I have reproduced with master and a pptx file on Windows 10(x64). 

Version: 5.1.0.0.alpha1+
Build ID: c1b97d2747004d1912744ab7ff11353a73713310
Locale: ja-JP (ja_JP)
Comment 21 Tomofumi Yagi 2015-10-18 07:31:38 UTC
Created attachment 119710 [details]
a simple password protected pptx file

Password is 1
Comment 22 Tomofumi Yagi 2015-10-18 07:37:41 UTC
Created attachment 119711 [details]
Workaround patch

A workaround patch is here.
Comment 23 raal 2015-11-15 19:45:00 UTC
*** Bug 95832 has been marked as a duplicate of this bug. ***
Comment 24 Commit Notification 2015-11-16 14:42:44 UTC
Takeshi Abe committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f630b6d5f165c8c507b8904b99594936edfd8da0

tdf#94008 Crash opening password protected file - CJK UI

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 25 Caolán McNamara 2015-11-16 14:44:13 UTC
*** Bug 95837 has been marked as a duplicate of this bug. ***
Comment 26 baffclan 2015-11-17 23:56:03 UTC
Cannot reproduce with newest master / Windows 7 Pro.

Version: 5.1.0.0.alpha1+ (x64)
Build ID: 32d4c03cba399ada807b8ec113a3928aa9e3ff7b
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-11-16_23:41:46
Locale: ja-JP (ja_JP)
Comment 27 Buovjaga 2015-11-18 06:45:08 UTC
I guess we can set to fixed per comment 26.
Comment 28 Commit Notification 2015-11-18 13:11:28 UTC
Takeshi Abe committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e401cb5c54d7f7d6c7a24c539acf35c7ec94d75b&h=libreoffice-5-0

tdf#94008 Crash opening password protected file - CJK UI

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 29 Kevin Suo 2015-12-03 05:45:01 UTC
Verified FIXED

Version: 5.0.4.1 (x64)
Build ID: 2def61bcbb29a7a8611b833682fe1291910b11ad
Locale: zh-CN (zh_CN)