tdf#94008 Crash opening password protected file - CJK UI

This fixes a buffer overflow writing end of pCaretXArray, which
can happen e.g. when drawing mnemonics in the password dialog.

Change-Id: I7d723cf8cfaeb66f340c7d9ea5b3bc728c6d6209